# go/routers.go
@@ -31,7 +31,7 @@ func NewRouter() *mux.Router {
 		var handler http.Handler
 		handler = route.HandlerFunc
 		handler = Logger(handler, route.Name)
-
+		handler = Authenticator(handler)
 		router.
 			Methods(route.Method).
 			Path(route.Pattern).
